Updated yiisoft/yii2-bootstrap4 version

--- a/composer.json
+++ b/composer.json
@@ -31,7 +31,7 @@
     ],
     "require": {
         "yiisoft/yii2": "~2.0",
-        "yiisoft/yii2-bootstrap4": "^1.0@dev"
+        "yiisoft/yii2-bootstrap4": "~2.0"
     },
     "require-dev": {
         "hiqdev/hidev": "dev-master",
